# nventr-wms

./: .gitignore  README.md  cobots.html  d1-inbound-receiving.html  d2-camera-infrastructure.html  d3-verification-process.html  d4-putaway-docprep.html  d5-robot-orchestration.html  d6-forklift-arm-sort.html  d7-prep-outbound.html  index.html  package-lock.json  package.json  teleop-governance-briefing.html  teleop-governance-flowchart.html  warehouse_ops_vvs.html
.gh-config/: hosts.yml
agentrun-spec/: README.md  SPEC.md  agentrun.py  pyproject.toml  site.html
agentrun-spec/registry/: index.json
agentrun-spec/tests/: test_agentrun.py
gazebo-warehouse/: Dockerfile  README.md  docker-compose.yml
gazebo-warehouse/scripts/: run_gazebo.sh
gazebo-warehouse/worlds/: warehouse.world
low level sys architecture/: #CAMERA INFRASTRUCTURE.py  #DRIVERS.py  #EVENTS, TICKETS AND LOGGING.py  #FLEET MANAGEMENT SYSTEM.py  #JOTSTICK CONTROL.py  #ROUTE DEFINITION.py  #SAFE PATH CONTROL.py  #SURVEILLANCE SYSTEM DEFINTION.py  #WAREHOUSE SYSTEM FOR INFORMATION RETRIEVAL.py  teleop.py  test_teleop.py
mujoco-warehouse/: README.md  warehouse_sim.py
nventr-yahboom-bridge/: nventr_bridge.py  nventr_bridge_webrtc.py  requirements.txt
nventr-yahboom-bridge/frp/: frpc.ini  frps.ini
scripts/: sync-next-build.mjs
software-workflow/: updated architecture v2.html
webspatial-mission-control/: index.html  logger.ts  package-lock.json  package.json
wms/: .env.example  .gitignore  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  prisma.config.ts
wms/prisma/: schema.prisma  (+1 more)
(+226 files in other folders)
